better loading experience + layout shift fix

--- a/src/app/game/select-name/select-name.component.scss
+++ b/src/app/game/select-name/select-name.component.scss
@@ -117,7 +117,7 @@
 
         &.selected,
         &.hover {
-          box-shadow: inset 0px 0px 0px 5px $success;
+          box-shadow: inset 0 0 0 0.5rem $success;
         }
       }
     }
